--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@koa/router": "^8.0.5",
+    "axios": "^0.19.1",
+    "dotenv": "^8.2.0",
     "koa": "^2.11.0"
   }
 }
