--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@koa/router": "^8.0.5",
     "axios": "^0.19.1",
     "dotenv": "^8.2.0",
-    "koa": "^2.11.0"
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0"
   }
 }
